<resources>
    <string name="app_name">Social Contribution</string>
    <string name="Welcome">YOUR Social Contribution App!</string>
    <string name="signup">Sign up</string>
    <string name="Signin">Sign in</string>
    <string name="Username">Username</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="checkPassword">Re-enter Password</string>
    <string name="notamember">Not a member yet? Sign up!</string>
    <string name="continueashuest">Continue as Guest!</string>
    <string name="entercredentials">Enter your credentials below</string>
    <string name="guest">Hello, Guest!</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="People">People</string>
    <string name="Animals">Animals</string>
    <string name="Events">Events</string>
    <string name="logout">Log Out</string>
    <string name="addnewpoint">Add New Point</string>
    <string name="Location">Location</string>
    <string name="getcurrentlocation">Get Currennt Location</string>
    <string name="Enterlocationinfo">Enter Location Info</string>
    <string name="Address">Address</string>
    <string name="zipcode">Zip Code</string>
    <string name="Add">Add</string>
    <string name="pointname">Point Name</string>
    <string name="filter">Filter</string>
    <string name="mapview">Map View</string>
    <string name="listview">List View</string>
    <string name="choosefilter">Choose Filters</string>
    <string name="allpoints">All Points</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular Points</string>
    <string name="justadded">Just added</string>
    <string name="seemore">See More</string>
    <string name="showall">Show All</string>
    <string name="youadded">Added by you</string>
    <string name="thisweek">This Week\'s Additions</string>
    <string name="suggestions">Suggestions</string>
    <string name="youmightlike">Points you might like</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="food">Food and Water</string>
    <string name="money">Financial Help</string>
    <string name="shelter">Shelter</string>
    <string name="personalcare">Personal Care</string>
    <string name="Water">Water</string>
    <string name="Adoption">Adoption</string>
    <string name="Vet">Vet</string>
    <string name="Treeplanting">Tree Planting</string>
    <string name="SeaCleaning">Sea Cleaning</string>
    <string name="Litterpicking">Litter Picking</string>
    <string name="Helpaffectedareas">Help Affected Areas</string>
    <string name="clear">Clear</string>
    <string name="applyfitler">Apply Filters</string>
    <string name="allfilter">All</string>
    <string name="text">"Great opportunities to help others seldom come, but small ones surround us every day." </string>
    <string name="text2">-Sally Koch</string>
    <string name="quotepeople">You have two hands. One to help yourself,the second to help others.</string>
    <string name="quoteanimals">It\'s a small thing to help one animal,but to that animal it\'s a big thing. </string>
    <string name="quoteanimals2">-Gene Baur </string>
    <string name="quoteevents">We won\'t have a society if we destroy the environment.</string>
    <string name="quoteevents2">-Margaret Mead</string>
    <string name="all">See All</string>
    <string name="nodata">No data found!</string>
    <string name="nodatafav">Browse the available points and choose your favourites!</string>
    <string name="nodata2">There is no available data at the moment!</string>
    <string name="nodatabuttonfav">Browse Points</string>
    <string name="nodatabutton">Add Points</string>
    <string name="pointinfo">Point Information</string>
    <string name="eventdate">Event Date</string>
    <string name="choosedate">Date</string>
    <string name="choosetime">Time</string>
    <string name="distance">Distance in M</string>
    <string name="addedon">Added on: </string>
    <string name="nearby">Nearby</string>
    <string name="whatisaroundyou">What is around you?</string>
    <string name="getcurretlocatio">Get current location</string>
    <string name="chooselocation">Choose Location</string>
    <string name="enterewlocation">Enter new location</string>
    <string name="five">5</string>
    <string name="general">General</string>
    <string name="points">Points</string>
    <string name="notifications">Notifications</string>
    <string name="aboutyou">About you</string>
    <string name="category_sub">Category, Subcategory</string>
    <string name="notamembercard">You are not Signed In</string>
    <string name="signinplease">If you are already a member, Sign In!</string>
    <string name="signupplease">If you are not a member, you can always Sign up!</string>
</resources>