<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:backgroundTint="#00FF33FF"
    android:background="#00FF33FF">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/gradient3" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/notamembercard"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/signinplease"
            android:textColor="@color/white"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/signin"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp"
            android:backgroundTint="#4EB542"
            app:cardCornerRadius="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Signin"
                android:textAlignment="center" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="145dp"
            android:text="@string/signupplease"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/signup"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="185dp"
            android:backgroundTint="#ff7844"
            app:cardCornerRadius="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/signup"
                android:textAlignment="center" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.cardview.widget.CardView>