<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F2F2F4"
    android:orientation="vertical"
    tools:context=".SignUp">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gradient3"
        android:layout_alignParentTop="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="25dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/gradient3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="8sp"
            android:text="@string/entercredentials"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:typeface="normal"
            android:layout_marginTop="150dp"/>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F2F2F4"
        android:orientation="vertical"
        android:layout_marginTop="220dp"
        android:paddingHorizontal="50dp">


            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:foregroundGravity="center"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginVertical="10dp"
                />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:foregroundGravity="center"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginVertical="10dp"
            />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginVertical="10dp"
            />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/checkPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginVertical="10dp"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff7844"
            android:onClick="savePersonalData"
            android:text="@string/signup"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            />

    </LinearLayout>
</RelativeLayout>