<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F2F2F4"
    android:orientation="vertical"
    tools:context=".SignIn">
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gradient3"
        android:layout_alignParentTop="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="25dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/gradient3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo2" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="8sp"
            android:text="@string/Welcome"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:typeface="normal"
            android:layout_marginTop="150dp"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        >

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:foregroundGravity="center"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:onClick="signUpForm"
            android:text="@string/notamember"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff7844"
            android:onClick="login"
            android:text="@string/Signin"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#83FF7844"
            android:onClick="continueasguest"
            android:text="@string/continueashuest"
            android:textAlignment="center"
            app:strokeColor="#ff7844"
            app:strokeWidth="3dp" />

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="50sp" />

    </LinearLayout>
</RelativeLayout>