<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nodata" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nodata"
        android:textColor="#333333"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nodatasub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nodatafav"
        android:textAlignment="center"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nondatafavbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/gradient3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/nodatabuttonfav"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

</LinearLayout>